pkgs/drbd9/drbd/.compat_test.6.1.26/fs_dax_get_by_bdev_takes_start_off.stderr
<command-line>: warning: "KBUILD_MODNAME" redefined
<command-line>: note: this is the location of the previous definition
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/fs_dax_get_by_bdev_takes_start_off.c: In function ‘foo’:
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/fs_dax_get_by_bdev_takes_start_off.c:8:16: error: too few arguments to function ‘fs_dax_get_by_bdev’
    8 |         return fs_dax_get_by_bdev(bdev, start_off);
      |                ^~~~~~~~~~~~~~~~~~
In file included from /home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/fs_dax_get_by_bdev_takes_start_off.c:4:
/nix/store/gl0cb943fyppp363vlazvxxv9bfiv70b-linux-6.1.26-dev/lib/modules/6.1.26/source/include/linux/dax.h:145:34: note: declared here
  145 | static inline struct dax_device *fs_dax_get_by_bdev(struct block_device *bdev,
      |                                  ^~~~~~~~~~~~~~~~~~
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/fs_dax_get_by_bdev_takes_start_off.c:9:1: error: control reaches end of non-void function [-Werror=return-type]
    9 | }
      | ^
cc1: some warnings being treated as errors
